# weather-cli

./: .env  README.md  main.py  pyproject.toml  weather_data.db
src/weather_cli/: __init__.py  api_client.py  cli.py  config.py  database.py  models.py
